kubernetes/authenticity-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cxc-authenticity-collector
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cxc-authenticity-collector
  template:
    metadata:
      labels:
        app: cxc-authenticity-collector
    spec:
      containers:
        - name: cxc-authenticity-collector
          image: iotaledger/cxc-authenticity-collector:v0.1.0
          imagePullPolicy: Always
          command:
          - npm
          - run
          - start:prod
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "500m"
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 3000
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cxc-authenticity-collector
  labels:
    app: cxc-authenticity-collector    
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: cxc-authenticity-collector
