kubernetes/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cxc-dashboard
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cxc-dashboard
  template:
    metadata:
      labels:
        app: cxc-dashboard
    spec:
      containers:
        - name: cxc-dashboard
          image: iotaledger/cxc-dashboard:v0.0.1
          command: ['sh', '-c', 'npm run build && npm run prod']
          resources:
            requests:
              memory: "500Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 3000
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cxc-dashboard
  labels:
    app: cxc-dashboard    
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: cxc-dashboard
