kubernetes/one-shot-device-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cxc-one-shot-device
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cxc-one-shot-device
  template:
    metadata:
      labels:
        app: cxc-one-shot-device
    spec:
      containers:
        - name: cxc-one-shot-device
          image: iotaledger/cxc-one-shot-device:v0.1.0
          command:
          - node
          - dist/src/main
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "500m"
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 3000
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cxc-one-shot-device
  labels:
    app: cxc-one-shot-device    
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: cxc-one-shot-device
