kubernetes/proof-of-ownership-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cxc-proof-of-ownership
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cxc-proof-of-ownership
  template:
    metadata:
      labels:
        app: cxc-proof-of-ownership
    spec:
      containers:
        - name: cxc-proof-of-ownership
          image: iotaledger/cxc-ssi-proof-of-ownership:v0.1.0
          command:
          - node
          - dist/src/main
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "500m"
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 3000
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cxc-proof-of-ownership
  labels:
    app: cxc-proof-of-ownership    
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: cxc-proof-of-ownership
